<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <include layout="@layout/component_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="30dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/payment"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/payment"
                android:textColor="@color/blackColor"
                android:textSize="25dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/step_one"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/step_one"
                    android:textSize="22dp"
                    android:textColor="@color/blackColor"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/phone_number"
                    app:endIconMode="clear_text"
                    app:prefixText="+251"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_phone_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/step_two"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/step_two"
                    android:textSize="22dp"
                    android:textColor="@color/blackColor"/>

                <TextView
                    android:id="@+id/from"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="22dp"
                    android:text="@string/from"
                    android:textColor="@color/blackColor"/>

                <TextView
                    android:id="@+id/send_fifty"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/send_fifty"
                    android:textSize="22dp"
                    android:textColor="@color/blackColor"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/step_three"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/step_three"
                    android:textSize="22dp"
                    android:textColor="@color/blackColor"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/confirm_payment_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/confirm_payment" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>