<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_background_2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:text="@string/ask_for_phone"
        android:textColor="@color/titleColor"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_rounded_corners"
        android:ems="10"
        android:hint="@string/hidden_number"
        android:textAlignment="center"
        android:inputType="number"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.028"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textColor="@color/titleColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText"
        app:layout_constraintVertical_bias="0.088" />

    <Button
        android:id="@+id/button_continue_phone"
        android:layout_width="125dp"
        android:layout_height="51dp"
        android:background="@drawable/button_rounded_corners_effect"
        android:text="@string/continue_button"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.152" />
</androidx.constraintlayout.widget.ConstraintLayout>